progs/cpp/21fa3399-c541-41cb-8c34-65f374696842/err.txt
progs/cpp/21fa3399-c541-41cb-8c34-65f374696842/prog.cpp:6:14: warning: missing terminating " character [enabled by default]
       cout <<";
              ^
progs/cpp/21fa3399-c541-41cb-8c34-65f374696842/prog.cpp:6:7: error: missing terminating " character
       cout <<";
       ^
progs/cpp/21fa3399-c541-41cb-8c34-65f374696842/prog.cpp: In function ‘int main()’:
progs/cpp/21fa3399-c541-41cb-8c34-65f374696842/prog.cpp:7:7: error: expected primary-expression before ‘return’
       return 0;
       ^
progs/cpp/21fa3399-c541-41cb-8c34-65f374696842/prog.cpp:7:7: error: expected ‘;’ before ‘return’
